Implement CR Suggestions - take 3
Signed-off-by: Catalin Sanda <catalin.sanda@gmail.com>